@@ -13,21 +13,21 @@ public class BeanAnalyzer {
 
     private static final Pattern GETTER = Pattern.compile("^(get|is)([A-Z].*)$");
 
-    public static Stream<PropertyMethod> findGetters(Class<?> type) {
+    public static Stream<PropertyGetter> findGetters(Class<?> type) {
         return Stream.of(type.getMethods())
                 .map(BeanAnalyzer::fromGetter)
                 .filter(Optional::isPresent)
                 .map(Optional::get);
     }
 
-    static Optional<PropertyMethod> fromGetter(Method maybeGetter) {
+    static Optional<PropertyGetter> fromGetter(Method maybeGetter) {
         Class<?> type = maybeGetter.getReturnType();
         if (type.equals(Void.class) || maybeGetter.getParameterTypes().length > 0) {
             return Optional.empty();
         }
 
         return propertyNameFromGetter(maybeGetter.getName())
-                .map(n -> new PropertyMethod(n, type, maybeGetter));
+                .map(n -> new PropertyGetter(n, type, maybeGetter));
     }
 
     static Optional<String> propertyNameFromGetter(String maybeGetter) {
