@@ -15,8 +15,7 @@ public class LrEntityOverlayTest {
         LrEntityOverlay<T1> overlay = new LrEntityOverlay<>(T1.class)
                 .addAttribute("u")
                 .addAttribute("x")
-                .addAttribute("y")
-                .addAttribute("z");
+                .addAttribute("y");
 
         Map<String, LrAttribute> attributes = new HashMap<>();
         overlay.getAttributes().forEach(a -> attributes.put(a.getName(), a));
@@ -24,7 +23,24 @@ public class LrEntityOverlayTest {
         assertEquals(int.class, attributes.get("u").getType());
         assertEquals(String.class, attributes.get("x").getType());
         assertEquals(boolean.class, attributes.get("y").getType());
-        assertEquals(String.class, attributes.get("z").getType());
+    }
+
+    @Test
+    public void testAddAttribute_Inheritance() {
+
+        LrEntityOverlay<T2> overlay = new LrEntityOverlay<>(T2.class)
+                .addAttribute("u")
+                .addAttribute("x")
+                .addAttribute("y")
+                .addAttribute("a");
+
+        Map<String, LrAttribute> attributes = new HashMap<>();
+        overlay.getAttributes().forEach(a -> attributes.put(a.getName(), a));
+
+        assertEquals(int.class, attributes.get("u").getType());
+        assertEquals(String.class, attributes.get("x").getType());
+        assertEquals(boolean.class, attributes.get("y").getType());
+        assertEquals(int.class, attributes.get("a").getType());
 
     }
 
@@ -48,6 +64,13 @@ public class LrEntityOverlayTest {
         }
 
         public void setZ(String z) {
+        }
+    }
+
+    public static class T2 extends T1 {
+
+        public int getA() {
+            return -1;
         }
     }
 }
