@@ -4,6 +4,7 @@ Release 2.10
 #256 Built-in JsonValueConverter for enums
 #258 "AdHoc" properties
 #259 NPE in metadata resource when the model has unknown attribute types
+#260 LrEntityOverlay.addAttribute(String) must detect attribute type
 
 Release 2.9
 
